tests/comparison_hook_bad_signature.stderr
tests/comparison_hook_bad_signature.sl:2:1: error: SL2049: invalid comparison hook signature
