tests/comparison_hook_bad_signature.sl
fn __equal(a int) bool {
	return true
}
